unpackaged/main/default/objects/ETI_Service_Line_Item__c/ETI_Service_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Booking Line Item</label>
    <nameField>
        <displayFormat>SVC-{00000}</displayFormat>
        <label>Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>