unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Cancel_Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Integration_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancel/Reschedule Integration Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>