unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Cancel_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Integration_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancel/Reschedule Integration Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>