unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Certificate_Link_Updated__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Link_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Link Updated?</label>
    <type>Checkbox</type>
</CustomField>