unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <label>Fee Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>