unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/New_Color2__c.field-meta.xml
<CustomField>
    <fullName>New_Color2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Color2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>