unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/New_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Vehicle_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Vehicle Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>