unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Plate_Color__c.field-meta.xml
<CustomField>
    <fullName>Plate_Color__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plate Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>