unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>