unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Result_Date__c.field-meta.xml
<CustomField>
    <fullName>Result_Date__c</fullName>
    <formula>datevalue(Test_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result Date</label>
    <type>Date</type>
</CustomField>