unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>ETI_Vehicle_Service__c</referenceTo>
    <relationshipLabel>Booking Line Items</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>