unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <description>This field is created to show selected service and fee details on walk in component</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>