unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Police Inspection</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>ADFCA</fullName>
            </value>
            <value>
                <fullName>SPEA Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>