unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Date</label>
    <type>DateTime</type>
</CustomField>