unpackaged/main/default/objects/ETI_Service_Line_Item__c/fields/Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee__c</fullName>
    <label>Total Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>